# kutai

./: .env.example  .gitignore  CLAUDE.md  _fresh_db_path.txt  benchmark_cli.py  benchmark_fetcher.py  capabilities.py  config.py  conftest.py  db.py  docker-compose.yml  error_policy.py  gpu_monitor.py  gpu_scheduler.py  kutai_wrapper.py  local_model_manager.py  mcp.yaml  model_profiles.py  model_registry.py  models.py  orchestrator.db  orchestrator.py  pipeline.py  pipeline_utils.py  plan-old.md  plan.md  plan_v3.md  pytest.ini  rate_limiter.py  registry.yaml  requirements.txt  router.py  run.py  start_kutai.bat  start_kutai.vbs  state_machine.py  telegram_bot.py  test_results.txt  yasar_hooks.py
.claude/: settings.local.json
.kutay/: visual.yaml
agents/: __init__.py  architect.py  base.py  coder.py  error_recovery.py  executor.py  fixer.py  implementer.py  planner.py  researcher.py  reviewer.py  test_generator.py  writer.py
collaboration/: __init__.py  blackboard.py
compliance_templates/: README.md
context/: assembler.py  onboarding.py  repo_map.py
credential_schemas/: apple_appstore.json  cloudflare.json  github.json  google_play.json  railway.json  sendgrid.json  sentry.json  stripe.json  supabase.json  vercel.json
data/: model_speeds.json
docker/: Dockerfile.sandbox  kutay-dashboard.json
docs/: 2026-05-31-modularization-finish-plan.md  2026-05-31-root-debt-map.md  architecture-modularization.md  (+10 more)
yazbunu/: pyproject.toml
yazbunu/src/yazbunu/static/: manifest.json
yazbunu/yazbunu/: __init__.py  server.py
yazbunu/yazbunu/static/: viewer.html
(+1887 files in other folders)
