[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "yazbunu"
version = "0.1.0"
description = "Lightweight structured JSONL logging with a mobile-friendly web viewer"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
server = ["aiohttp>=3.9.0"]

[project.scripts]
yazbunu-server = "yazbunu.server:main"
